--- a/index.html
+++ b/index.html
@@ -63,30 +63,86 @@
 
 
       <div class="centerItem main_flex__nowrap align-items_center">
-
-        <div class="description">
-            <h2>Media Group</h2>
-            <a href="#">www.mediagroup.com</a>
-            <p>Lorem ipsum dolor sit amet, consectetur
-              adipisicing elit. Velit assumenda incidunt
-              expedita aliquam similique dicta,
-              numquam accusamus voluptatum maxime eum,
+          <div class="description">
+              <h2>Media Group</h2>
+              <a href="#">www.mediagroup.com</a>
+              <p>Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Velit assumenda incidunt
+                expedita aliquam similique dicta,
+                numquam accusamus voluptatum maxime eum,
               </p>
-        </div>
-
-
+          </div>
           <img src="img/page/work1.png" alt="">
-
-
       </div>
 
       <div class="box"></div>
 
-    </div>
-  </section>
+      <div class="itemList main_flex__nowrap flex__jcontent_between">
 
-  <section>
-    <div class="container">
+      <div class="item">
+
+        <svg viewBox="0 0 384 384" xmlns="http://www.w3.org/2000/svg">
+          <path d="m336 0h-288c-26.472656 0-48 21.527344-48 48v288c0 26.472656 21.527344 48 48 48h288c26.472656 0 48-21.527344 48-48v-288c0-26.472656-21.527344-48-48-48zm-288 32h288c8.824219 0 16 7.175781 16 16v113.375l-52.6875-52.6875c-6.25-6.246094-16.375-6.246094-22.625 0l-112.6875 112.6875-40.6875-40.6875c-6.25-6.246094-16.375-6.246094-22.625 0l-68.6875 68.6875v-201.375c0-8.824219 7.175781-16 16-16zm288 320h-288c-8.824219 0-16-7.175781-16-16v-41.375l80-80 92.6875 92.679688c3.128906 3.136718 7.214844 4.695312 11.3125 4.695312s8.183594-1.558594 11.3125-4.6875c6.246094-6.25 6.246094-16.375 0-22.625l-40.6875-40.6875 101.375-101.367188 64 64v129.367188c0 8.824219-7.175781 16-16 16zm0 0"/><path d="m128 96c0 17.671875-14.328125 32-32 32s-32-14.328125-32-32 14.328125-32 32-32 32 14.328125 32 32zm0 0"/>
+        </svg>
+
+        <h2>Beautiful Design</h2>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+          elit. Earum quia rerum quod numquam, doloremque quis totam
+          autem. Saepe a nisi necessitatibus
+        </p>
+
+      </div>
+
+      <div class="item">
+
+        <?xml version="1.0" encoding="iso-8859-1"?>
+        <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        	 viewBox="0 0 548.165 548.165" style="enable-background:new 0 0 548.165 548.165;"
+        	 xml:space="preserve">
+
+        		<path d="M526.76,131.045c-14.277-14.274-31.498-21.413-51.675-21.413h-63.953l-14.558-38.826
+        			c-3.618-9.325-10.229-17.368-19.846-24.128c-9.613-6.757-19.462-10.138-29.551-10.138H200.996
+        			c-10.088,0-19.939,3.381-29.552,10.138c-9.613,6.76-16.225,14.803-19.842,24.128l-14.56,38.826H73.089
+        			c-20.179,0-37.401,7.139-51.678,21.413C7.137,145.32,0,162.544,0,182.721v255.813c0,20.178,7.137,37.404,21.411,51.675
+        			c14.277,14.277,31.5,21.416,51.678,21.416h401.989c20.177,0,37.397-7.139,51.675-21.416
+        			c14.273-14.271,21.412-31.497,21.412-51.675V182.721C548.169,162.544,541.03,145.32,526.76,131.045z M364.446,400.993
+        			c-25.029,25.03-55.147,37.548-90.362,37.548s-65.331-12.518-90.362-37.548c-25.031-25.026-37.544-55.151-37.544-90.358
+        			c0-35.218,12.517-65.333,37.544-90.364c25.028-25.031,55.148-37.544,90.362-37.544s65.333,12.516,90.362,37.544
+        			c25.03,25.028,37.545,55.146,37.545,90.364C401.991,345.842,389.477,375.964,364.446,400.993z"/>
+        		<path d="M274.084,228.403c-22.651,0-42.018,8.042-58.102,24.128c-16.084,16.084-24.126,35.448-24.126,58.104
+        			c0,22.647,8.042,42.014,24.126,58.098c16.084,16.081,35.45,24.123,58.102,24.123c22.648,0,42.017-8.042,58.101-24.123
+        			c16.084-16.084,24.127-35.45,24.127-58.098c0-22.655-8.043-42.019-24.127-58.104C316.102,236.446,296.732,228.403,274.084,228.403
+        			z"/>
+        	</svg>
+
+        <h2>Built to Perfection</h2>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+          elit. Earum quia rerum quod numquam, doloremque quis totam
+          autem. Saepe a nisi necessitatibus
+        </p>
+
+      </div>
+
+      <div class="item">
+
+        <svg viewBox="0 -28 512.00002 512" xmlns="http://www.w3.org/2000/svg">
+          <path d="m471.382812 44.578125c-26.503906-28.746094-62.871093-44.578125-102.410156-44.578125-29.554687 0-56.621094 9.34375-80.449218 27.769531-12.023438 9.300781-22.917969 20.679688-32.523438 33.960938-9.601562-13.277344-20.5-24.660157-32.527344-33.960938-23.824218-18.425781-50.890625-27.769531-80.445312-27.769531-39.539063 0-75.910156 15.832031-102.414063 44.578125-26.1875 28.410156-40.613281 67.222656-40.613281 109.292969 0 43.300781 16.136719 82.9375 50.78125 124.742187 30.992188 37.394531 75.535156 75.355469 127.117188 119.3125 17.613281 15.011719 37.578124 32.027344 58.308593 50.152344 5.476563 4.796875 12.503907 7.4375 19.792969 7.4375 7.285156 0 14.316406-2.640625 19.785156-7.429687 20.730469-18.128907 40.707032-35.152344 58.328125-50.171876 51.574219-43.949218 96.117188-81.90625 127.109375-119.304687 34.644532-41.800781 50.777344-81.4375 50.777344-124.742187 0-42.066407-14.425781-80.878907-40.617188-109.289063zm0 0"/>
+        </svg>
+
+        <h2>Satisfaction Guaranteed</h2>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+          elit. Earum quia rerum quod numquam, doloremque quis totam
+          autem. Saepe a nisi necessitatibus
+        </p>
+
+      </div>
+
+      </div>
 
     </div>
   </section>
